tests/ui/error-codes/E0719.stderr
error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/E0719.rs:3:42
   |
LL | fn test() -> Box<dyn Iterator<Item = (), Item = Unit>> {
   |                               ---------  ^^^^^^^^^^^ re-bound here
   |                               |
   |                               `Item` bound here first

error[E0719]: the value of the associated type `Item` in trait `Iterator` is already specified
  --> $DIR/E0719.rs:9:38
   |
LL |     let _: &dyn Iterator<Item = i32, Item = i32>;
   |                          ----------  ^^^^^^^^^^ re-bound here
   |                          |
   |                          `Item` bound here first

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0719`.
